ready to integrate with craft

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +41,14 @@
     "        depth = \"\"\n",
     "        print(\"this conversation is\", len(chain), \"utterances long.\")\n",
     "        for utterance in reversed(chain):\n",
-    "            print(depth + utterance.text.replace(\"\\n\", \" \")[:80])\n",
+    "            print(depth + utterance.text.replace(\"\\n\", \" \")[:50])\n",
     "            depth += \"--> \"\n",
     "        print(\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -57,203 +57,207 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "updating intermediate at ./intermediate_format/Cornell_University.json\n",
-      "intermediate already up to date\n",
+      "generating Star_Trek talk page intermediate from scratch...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 96%|█████████▌| 1718/1793 [09:30<00:22,  3.32it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deleting this guy!! eb14d894bab53eb1042fc8c87e7cda02\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 96%|█████████▌| 1719/1793 [09:30<00:22,  3.29it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this was the text! {{sourcecheck|checked=false|needhelp=}}\n",
+      "this was the block! -----------------------------\n",
+      "text: {{sourcecheck|checked=false|needhelp=}}\n",
+      "timestamp: 2018-01-29T17:43:29Z\n",
+      "user: InternetArchiveBot\n",
+      "ingested: True\n",
+      "revision_ids: [822989456]\n",
+      "reply_chain: ['e0539327ab8671537823c95c5bda6a0d', 'ec6b0845bd391623a7ec8e93e15484e3', '28c8a9a0d49c6b6fb22ebbb003e56f9c', '576f974d151876bbb4c28f7730779d4c', '91e242f382456e512b0689e84a9071f4', 'eb14d894bab53eb1042fc8c87e7cda02']\n",
+      "is_followed: True\n",
+      "-----------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 97%|█████████▋| 1740/1793 [09:36<00:15,  3.53it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deleting this guy!! eb14d894bab53eb1042fc8c87e7cda02\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 97%|█████████▋| 1741/1793 [09:37<00:15,  3.35it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this was the text! {{sourcecheck|checked=false|needhelp=}}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████▉| 1792/1793 [09:52<00:00,  3.03it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intermediate generated.\n",
+      "intermediate written to disk at  ./intermediate_format/Star_Trek.json\n",
       "generating corpus...\n",
       "corpus generated.\n",
       "this conversation is 1 utterances long.\n",
-      "|topic=Education\n",
+      "{{WikiProject United States |class=GA |importance=\n",
       "\n",
       "\n",
       "this conversation is 1 utterances long.\n",
-      "|action8=GAN |action8date=01:50, 15 December 2010 |action8link=Talk:Cornell Univ\n",
+      "==Re-opening this discussion: Cleanup too soon/fas\n",
       "\n",
       "\n",
       "this conversation is 1 utterances long.\n",
-      "== Seal == [[User talk:Ilberia]] continually puts his or her altered image of th\n",
-      "\n",
-      "\n",
-      "this conversation is 2 utterances long.\n",
-      "== External links modified == Hello fellow Wikipedians, I have just modified 5 e\n",
-      "--> I have just modified {{plural:1|one external link|1 external links}} on [[Cornel\n",
-      "\n",
-      "\n",
-      "this conversation is 3 utterances long.\n",
-      "I have again reverted drastic edits to this article, which were implemented with\n",
-      "--> :Thanks for thinking through that detailed list Eustress. Very helpful! I'm not \n",
-      "--> --> ::Hi Jeff. For a high-level discussion on this, I've initiated a thread at [[Wik\n",
-      "\n",
-      "\n",
-      "this conversation is 8 utterances long.\n",
-      "{{ArticleHistory |action1=PR |action1date=03:15, 11 March 2006\n",
-      "--> |action1link=Wikipedia:Peer review/Cornell University/archive1\n",
-      "--> --> |action1result=reviewed\n",
-      "--> --> --> |action1oldid=43238831\n",
-      "--> --> --> --> |action2=PR |action2date=21:28, 22 May 2006\n",
-      "--> --> --> --> --> |action2link=Wikipedia:Peer review/Cornell University/archive2\n",
-      "--> --> --> --> --> --> |action2result=reviewed |action2oldid=54592855 |action3=PR |action3date=20:56, 1\n",
-      "--> --> --> --> --> --> --> |action3link=Wikipedia:Peer review/Cornell University/archive3\n",
-      "\n",
-      "\n",
-      "this conversation is 2 utterances long.\n",
-      "== External links modified == Hello fellow Wikipedians, I have just modified 5 e\n",
-      "--> I have just added archive links to {{plural:2|one external link|2 external links\n",
-      "\n",
-      "\n",
-      "this conversation is 2 utterances long.\n",
-      "== Proposal to merge [[Cornell gorge suicides]] with the Cornell Univ article ==\n",
-      "--> Disagree with merging. We don't want to have all the details about the history o\n",
-      "\n",
-      "\n",
-      "this conversation is 1 utterances long.\n",
-      ":::Cornell is a private as well as a federal land-grant university. The article \n",
-      "\n",
-      "\n",
-      "this conversation is 2 utterances long.\n",
-      "{{sourcecheck|checked=false}}\n",
-      "--> Cheers.—[[User:Cyberbot II|<sup style=\"color:green;font-family:Courier\">cyberbot\n",
-      "\n",
-      "\n",
-      "this conversation is 1 utterances long.\n",
-      "==Template of faculty== Well, i tried, but i dont have a cropping tool that work\n",
-      "\n",
-      "\n",
-      "this conversation is 1 utterances long.\n",
-      "|action6=GAN |action6date=17:20, 21 September 2010 |action6link=Talk:Cornell Uni\n",
-      "\n",
-      "\n",
-      "this conversation is 1 utterances long.\n",
-      "Cornell has an endowment of over $5 billion.<ref>{{cite web|last=Doolittle|first\n",
-      "\n",
-      "\n",
-      "this conversation is 2 utterances long.\n",
-      "</blockquote> {{reflist}} ::Thanks, Tydtsgch34. Allow me to comment on the conte\n",
-      "--> :::::: Why don't you just offer a suggested edit to Tydtsgch34's contribution an\n",
-      "\n",
-      "\n",
-      "this conversation is 2 utterances long.\n",
-      "{{sourcecheck|checked=false}}\n",
-      "--> Cheers.—[[User:Cyberbot II|<sup style=\"color:green;font-family:Courier\">cyberbot\n",
-      "\n",
-      "\n",
-      "this conversation is 3 utterances long.\n",
-      ":If those statements are supported by sources or are summaries of slightly longe\n",
-      "--> ::Are you posting under more than one account? =//= [[User:Johnny Squeaky|Johnny\n",
-      "--> --> :::That is an unwarranted personal attack. [[User:Drmies|Drmies]] ([[User talk:D\n",
-      "\n",
-      "\n",
-      "this conversation is 1 utterances long.\n",
-      "{{WikiProject Universities|class=B|importance=high}}\n",
-      "\n",
-      "\n",
-      "this conversation is 1 utterances long.\n",
-      "== Does John Cleese truly represent \"Famous current and former Cornell faculty\"?\n",
-      "\n",
-      "\n",
-      "this conversation is 1 utterances long.\n",
-      "== Help == I am a student at Cornell University currently working on developing \n",
-      "\n",
-      "\n",
-      "this conversation is 2 utterances long.\n",
-      "== External links modified == Hello fellow Wikipedians, I have just modified 5 e\n",
-      "--> I have just added archive links to {{plural:4|one external link|4 external links\n",
+      "|algo = old(30d)\n",
       "\n",
       "\n",
       "this conversation is 4 utterances long.\n",
-      "==Environmental Record text== I recently undid an expansion of information about\n",
-      "--> :[[WP:UNDUE]] applies to viewpoints, not information. --[[User:The Cunctator|The\n",
-      "--> --> ::Not quite.  The publishing of information in an encyclopedia article itself is\n",
-      "--> --> --> ::::Following up on our discussion over [[User talk:JohnInDC|here]], we did atte\n",
-      "\n",
-      "\n",
-      "this conversation is 3 utterances long.\n",
-      "== Assertion that Cornell is a \" is an American private Ivy League research univ\n",
-      "--> \"Cornell is the federal land-grant institution of New York State, a private endo\n",
-      "--> --> ::Cornell identifies itself as a private AND public university. See \"Identity\" s\n",
+      "{{Refideas\n",
+      "--> |1={{Cite web|last=Eller|first=Claudia|url=http://\n",
+      "--> --> }}\n",
+      "--> --> --> {{Auto archiving notice}}\n",
       "\n",
       "\n",
       "this conversation is 1 utterances long.\n",
-      "== Copyright problem removed == Prior content in this article duplicated one or \n",
+      "{{User:MiszaBot/config |archive = Talk:Star Trek/A\n",
+      "\n",
+      "\n",
+      "this conversation is 11 utterances long.\n",
+      "{{Talk header|search=yes}}\n",
+      "--> {{ArticleHistory |action1=RBP |action1date=10:24, \n",
+      "--> --> |action1link=Wikipedia:Archive/Refreshing brillian\n",
+      "--> --> --> |action1result=kept |action1oldid=2189970 |action2\n",
+      "--> --> --> --> |action3link=Wikipedia:Articles for deletion/Star \n",
+      "--> --> --> --> --> |action3result=kept |action3oldid=57162750 |action\n",
+      "--> --> --> --> --> --> |action4link=Talk:Star Trek/Archive 2#Failed GA\n",
+      "--> --> --> --> --> --> --> |action4result=failed |action4oldid=59279859 |acti\n",
+      "--> --> --> --> --> --> --> --> |action7link=Talk:Star Trek/Archive 6#GA Review\n",
+      "--> --> --> --> --> --> --> --> --> |action7result=Failed |action7oldid=165281874\n",
+      "--> --> --> --> --> --> --> --> --> --> |currentstatus=GA\n",
+      "\n",
+      "\n",
+      "this conversation is 4 utterances long.\n",
+      "{{Refideas\n",
+      "--> |1={{Cite web|last=Eller|first=Claudia|url=http://\n",
+      "--> --> }}\n",
+      "--> --> --> {{WikiProjectBannerShell|1=\n",
       "\n",
       "\n",
       "this conversation is 1 utterances long.\n",
-      "<blockquote>\n",
+      "{{WP1.0 |v0.7=pass |category=Arts |class=GA |impor\n",
       "\n",
       "\n",
       "this conversation is 1 utterances long.\n",
-      "{{Talk header}}\n",
-      "\n",
-      "\n",
-      "this conversation is 1 utterances long.\n",
-      "{{WP1.0|WPCD=y}}\n",
-      "\n",
-      "\n",
-      "this conversation is 1 utterances long.\n",
-      "== Largest indoor natural rock climbing wall in North America == I find it highl\n",
-      "\n",
-      "\n",
-      "this conversation is 3 utterances long.\n",
-      "== <s>Boosterism</s> removal ==\n",
-      "--> These are examples of [[Wikipedia:Avoid_academic_boosterism|academic boosterism]\n",
-      "--> --> :I think you're taking this a little far. The comments are no different than on \n",
-      "\n",
-      "\n",
-      "this conversation is 1 utterances long.\n",
-      "|action5=FAR |action5date=14:40, 5 December 2008 |action5link=Wikipedia:Featured\n",
+      "|otd1date=2012-09-08 |otd1oldid=511192795\n",
       "\n",
       "\n",
       "this conversation is 2 utterances long.\n",
-      "When you have finished reviewing my changes, please set the ''checked'' paramete\n",
-      "--> Cheers.—[[User:Cyberbot II|<sup style=\"color:green;font-family:Courier\">cyberbot\n",
+      "===''Star Trek'' Universe===   Recently (over the \n",
+      "--> :::: We'll see how the term is utilized in the com\n",
       "\n",
       "\n",
       "this conversation is 1 utterances long.\n",
-      ":::Instead of deleting the work of contributors, Eustress should have productive\n",
+      "|topic= television\n",
       "\n",
       "\n",
       "this conversation is 1 utterances long.\n",
-      "==Admissions selectivity== I removed the following statement from the article: \"\n",
+      "So: consistent with similar posts (and similar dis\n",
       "\n",
       "\n",
       "this conversation is 1 utterances long.\n",
-      "{{OnThisDay|date1=2008-10-07|oldid1=243341341|date2=2011-10-07|oldid2=454426194|\n",
+      "|archive = Talk:Star Trek/Archive %(counter)d\n",
       "\n",
       "\n",
       "this conversation is 1 utterances long.\n",
-      "}}\n",
+      "|maindate=May 22, 2004\n",
       "\n",
       "\n",
       "this conversation is 1 utterances long.\n",
-      "<!--Template:Undated--> <!--Autosigned by SineBot--> :::One caption saying publi\n",
-      "\n",
-      "\n",
-      "this conversation is 10 utterances long.\n",
-      "== <s>Boosterism</s> removal ==\n",
-      "--> These are examples of [[Wikipedia:Avoid_academic_boosterism|academic boosterism]\n",
-      "--> --> :This is a factual statement. <blockquote>''Many of Cornell's schools have been \n",
-      "--> --> --> ::The sentences don't really add much value to the encyclopedia, and [[Wikipedia\n",
-      "--> --> --> --> :::First, there are many short sentences in many Wiki articles that \"really don'\n",
-      "--> --> --> --> --> :::: This game of parroting rankings to the point of [[WP:UNDUE|undue influence]\n",
-      "--> --> --> --> --> --> :::::Your view is classic POV. Rankings are a matter of public record just like \n",
-      "--> --> --> --> --> --> --> :::::: Yawn, personal attacks, what a surprise. For the record, I went to MIT wh\n",
-      "--> --> --> --> --> --> --> --> :::::::Good grief! ''\"Yawn\"???'' Talk about \"personal attacks\". Apparently you a\n",
-      "--> --> --> --> --> --> --> --> --> ::::::::Enough. You've both made your points now move on. [[User:ElKevbo|ElKevbo\n",
+      "{{Vital article|level=4|topic=Society|class=GA}}\n",
       "\n",
       "\n",
       "this conversation is 1 utterances long.\n",
-      "{{WikiProject New York|class=B|importance=Low|Cornell=yes|Cornell-importance=top\n",
+      "|action9=GAN |action9date= 22:01, 11 September 201\n",
       "\n",
       "\n",
-      "this conversation is 2 utterances long.\n",
-      "{{WikiProjectBannerShell|collapsed=yes |1=\n",
-      "--> {{WikiProject Qatar|class=B|importance=low}}\n",
+      "this conversation is 4 utterances long.\n",
+      "===''Star Trek'' Universe===   Recently (over the \n",
+      "--> ::: Deleting what? Shutting down what? [[User:Rdzo\n",
+      "--> --> :::: Thanks for editing the autoarchiving. [[User:\n",
+      "--> --> --> ::::: No problem. Figured that was part of it [[Us\n",
       "\n",
+      "\n",
+      "this conversation is 1 utterances long.\n",
+      "|counter = 9 |maxarchivesize = 150K |archiveheader\n",
+      "\n",
+      "\n",
+      "this conversation is 1 utterances long.\n",
+      "| style=\"text-align:center;\" rowspan=\"6\" |  ''The \n",
+      "\n",
+      "\n",
+      "this conversation is 1 utterances long.\n",
+      "{{Skip to TOC}}\n",
+      "\n",
+      "\n",
+      "this conversation is 1 utterances long.\n",
+      "|action8=PR |action8date=19:23, 12 July 2009 |acti\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n"
      ]
     }
    ],
    "source": [
-    "corp = pipeline.get_corpus(\"Cornell_University\", write_intermediate_to_disk=True)\n",
+    "corp = pipeline.get_corpus(\"Star_Trek\", write_intermediate_to_disk=True)\n",
     "print_corpus(corp)"
    ]
   },
